--- a/WalletApp.API/appsettings.json
+++ b/WalletApp.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppConnection": "Data Source=localhost;User ID=root;Password=Recreat1on;Database=wallet-db;"
+    "AppConnection": "Host=localhost;Port=5433;Database=wallet-db;Username=postgres;Password=Recreat1on"
   }
 }
